--- a/packages/server/docker-compose.yaml
+++ b/packages/server/docker-compose.yaml
@@ -1,10 +1,12 @@
-version: "3"
+version: '3'
 services:
-  db:
-    image: mongo
-    volumes:
-      - dbdata:/data/db
-    ports:
-      - 27017:27017
+    db:
+        image: postgres:10.5-alpine
+        volumes:
+            - dbdata:/data/db
+        ports:
+            - 5432:5432
+        environment:
+            - POSTGRES_PASSWORD=password
 volumes:
-  dbdata:
+    ? dbdata
