--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -4,6 +4,7 @@
     "description": "GraphQL server",
     "main": "index.js",
     "scripts": {
+        "initdb": "docker-compose up -d",
         "start": "nodemon index.ts --exec babel-node --extensions '.ts' index.ts",
         "check-types": "tsc"
     },
@@ -18,9 +19,9 @@
         "@babel/preset-typescript": "^7.0.0",
         "@types/bcrypt": "^2.0.0",
         "@types/express": "^4.16.0",
-        "@types/mongoose": "^5.2.11",
         "@types/passport": "^0.4.6",
         "@types/passport-local": "^1.0.33",
+        "@types/sequelize": "^4.27.25",
         "graphql-tools": "^3.1.1",
         "nodemon": "^1.18.3",
         "typescript": "^3.0.3"
@@ -31,9 +32,10 @@
         "express": "^4.16.3",
         "graphql": "^0.13.2",
         "jsonwebtoken": "^8.3.0",
-        "mongoose": "^5.2.13",
         "passport": "^0.4.0",
         "passport-jwt": "^4.0.0",
-        "passport-local": "^1.0.0"
+        "passport-local": "^1.0.0",
+        "pg": "^7.4.3",
+        "sequelize": "^4.38.1"
     }
 }
