--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -19,6 +19,7 @@
         "@babel/preset-typescript": "^7.0.0",
         "@types/bcrypt": "^2.0.0",
         "@types/express": "^4.16.0",
+        "@types/jsonwebtoken": "^7.2.8",
         "@types/passport": "^0.4.6",
         "@types/passport-local": "^1.0.33",
         "@types/sequelize": "^4.27.25",
