--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -6,25 +6,32 @@
     "scripts": {
         "initdb": "docker-compose up -d",
         "start": "nodemon index.ts --exec babel-node --extensions '.ts' index.ts",
-        "check-types": "tsc"
+        "check-types": "tsc",
+        "test": "NODE_ENV=test jest"
     },
     "author": "",
     "license": "ISC",
     "devDependencies": {
         "@babel/cli": "^7.0.0",
-        "@babel/core": "^7.0.0",
+        "@babel/core": "^7.1.0",
         "@babel/node": "^7.0.0",
         "@babel/plugin-proposal-class-properties": "^7.0.0",
         "@babel/preset-env": "^7.0.0",
         "@babel/preset-typescript": "^7.0.0",
         "@types/bcrypt": "^2.0.0",
         "@types/express": "^4.16.0",
+        "@types/jest": "^23.3.2",
         "@types/jsonwebtoken": "^7.2.8",
         "@types/passport": "^0.4.6",
         "@types/passport-local": "^1.0.33",
         "@types/sequelize": "^4.27.25",
+        "@types/supertest": "^2.0.6",
+        "babel-core": "^7.0.0-bridge",
+        "babel-jest": "^23.6.0",
         "graphql-tools": "^3.1.1",
+        "jest": "^23.6.0",
         "nodemon": "^1.18.3",
+        "supertest": "^3.3.0",
         "typescript": "^3.0.3"
     },
     "dependencies": {
@@ -38,5 +45,22 @@
         "passport-local": "^1.0.0",
         "pg": "^7.4.3",
         "sequelize": "^4.38.1"
+    },
+    "jest": {
+        "moduleDirectories": [
+            "./node_modules",
+            "./src"
+        ],
+        "moduleFileExtensions": [
+            "ts",
+            "tsx",
+            "js",
+            "jsx"
+        ],
+        "transform": {
+            "^.+\\.(js|jsx|ts|tsx)$": "babel-jest"
+        },
+        "testRegex": "(/__tests__/.*|\\.(test|spec))\\.(ts|tsx|js)$",
+        "verbose": false
     }
 }
