--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -23,6 +23,7 @@
         "@types/jest": "^23.3.2",
         "@types/jsonwebtoken": "^7.2.8",
         "@types/passport": "^0.4.6",
+        "@types/passport-jwt": "^3.0.1",
         "@types/passport-local": "^1.0.33",
         "@types/sequelize": "^4.27.25",
         "@types/supertest": "^2.0.6",
@@ -37,6 +38,7 @@
     "dependencies": {
         "apollo-server-express": "^2.0.6",
         "bcrypt": "^3.0.0",
+        "dotenv": "^6.0.0",
         "express": "^4.16.3",
         "graphql": "^0.13.2",
         "jsonwebtoken": "^8.3.0",
