--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,7 +14,9 @@
         "isolatedModules": true,
         // Import non-ES modules as default imports.
         "esModuleInterop": true,
-        "allowSyntheticDefaultImports": true
+        "allowSyntheticDefaultImports": true,
+        "noUnusedLocals": true,
+        "noUnusedParameters": true
     },
     "include": ["packages"]
 }
