--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -69,6 +69,7 @@
             "^.+\\.(js|jsx|ts|tsx)$": "babel-jest"
         },
         "testRegex": "(/__tests__/.*|\\.(test))\\.(ts|tsx|js)$",
-        "verbose": false
+        "verbose": false,
+        "testEnvironment": "node"
     }
 }
