--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -9,7 +9,8 @@
         "check-types": "tsc",
         "pretest": "NODE_ENV=test babel-node --extensions '.ts' ./src/utils/setupTest.ts",
         "test": "NODE_ENV=test jest",
-        "lint": "node_modules/.bin/tslint -p ../../tsconfig.json"
+        "lint": "node_modules/.bin/tslint -p ../../tsconfig.json",
+        "generate-types": "gql-gen --require ts-node/register --schema ./src/schema.ts --template graphql-codegen-typescript-resolvers-template --out ./src/schema/schema.d.ts"
     },
     "author": "",
     "license": "ISC",
@@ -23,6 +24,7 @@
         "@types/bcrypt": "^2.0.0",
         "@types/dotenv": "^4.0.3",
         "@types/express": "^4.16.0",
+        "@types/graphql": "^14.0.3",
         "@types/jest": "^23.3.2",
         "@types/jsonwebtoken": "^7.2.8",
         "@types/passport": "^0.4.6",
@@ -32,10 +34,13 @@
         "@types/supertest": "^2.0.6",
         "babel-core": "^7.0.0-bridge",
         "babel-jest": "^23.6.0",
+        "graphql-code-generator": "^0.13.0",
+        "graphql-codegen-typescript-resolvers-template": "^0.13.0",
         "graphql-tools": "^3.1.1",
         "jest": "^23.6.0",
         "nodemon": "^1.18.3",
         "supertest": "^3.3.0",
+        "ts-node": "^7.0.1",
         "tslint": "^5.11.0",
         "tslint-config-prettier": "^1.15.0",
         "tslint-eslint-rules": "^5.4.0",
@@ -46,7 +51,7 @@
         "bcrypt": "^3.0.0",
         "dotenv": "^6.0.0",
         "express": "^4.16.3",
-        "graphql": "^0.13.2",
+        "graphql": "^14.0.2",
         "jsonwebtoken": "^8.3.0",
         "passport": "^0.4.0",
         "passport-jwt": "^4.0.0",
