--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -8,7 +8,7 @@
         "start": "nodemon index.ts --exec babel-node --extensions '.ts' index.ts",
         "check-types": "tsc",
         "pretest": "NODE_ENV=test babel-node --extensions '.ts' ./src/utils/setup-test.ts",
-        "test": "NODE_ENV=test jest",
+        "test": "NODE_ENV=test jest --runInBand",
         "lint": "node_modules/.bin/tslint -p ../../tsconfig.json",
         "generate-types": "gql-gen --require ts-node/register --schema ./src/graphql.ts --template graphql-codegen-typescript-template --out ./src/typings/generated.d.ts"
     },
