--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -10,7 +10,7 @@
         "pretest": "NODE_ENV=test babel-node --extensions '.ts' ./src/utils/setup-test.ts",
         "test": "NODE_ENV=test jest --runInBand",
         "lint": "node_modules/.bin/tslint -p ../../tsconfig.json",
-        "generate-types": "gql-gen --require ts-node/register --schema ./src/graphql.ts --template graphql-codegen-typescript-template --out ./src/typings/generated.d.ts"
+        "generate-types": "gql-gen --require ts-node/register --schema ./src/graphql/index.ts --template graphql-codegen-typescript-template --out ./src/typings/generated.d.ts"
     },
     "author": "",
     "license": "ISC",
