--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -49,6 +49,7 @@
     "dependencies": {
         "apollo-server-express": "^2.0.6",
         "bcrypt": "^3.0.0",
+        "dataloader": "^1.4.0",
         "dotenv": "^6.0.0",
         "express": "^4.16.3",
         "graphql": "^14.0.2",
