--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -58,7 +58,8 @@
         "passport-jwt": "^4.0.0",
         "passport-local": "^1.0.0",
         "pg": "^7.4.3",
-        "sequelize": "^4.38.1"
+        "sequelize": "^4.38.1",
+        "validator": "^10.9.0"
     },
     "jest": {
         "moduleDirectories": [
