--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -7,8 +7,10 @@
         "initdb": "docker-compose up -d",
         "start": "nodemon index.ts --exec babel-node --extensions '.ts' index.ts",
         "check-types": "tsc",
-        "pretest": "NODE_ENV=test babel-node --extensions '.ts' ./src/utils/setup-test.ts",
-        "test": "NODE_ENV=test jest --runInBand",
+        "preintegration-test": "NODE_ENV=test babel-node --extensions '.ts' ./src/utils/setup-test.ts",
+        "integration-test": "NODE_ENV=test jest -c jest.config.integration.json --runInBand",
+        "unit-test": "NODE_ENV=test jest -c jest.config.unit.json",
+        "test": "yarn unit-test && yarn integration-test",
         "lint": "node_modules/.bin/tslint -p ../../tsconfig.json",
         "generate-types": "gql-gen --require ts-node/register --schema ./src/graphql/index.ts --template graphql-codegen-typescript-template --out ./src/typings/generated.d.ts"
     },
@@ -60,23 +62,5 @@
         "pg": "^7.4.3",
         "sequelize": "^4.38.1",
         "validator": "^10.9.0"
-    },
-    "jest": {
-        "moduleDirectories": [
-            "./node_modules",
-            "./src"
-        ],
-        "moduleFileExtensions": [
-            "ts",
-            "tsx",
-            "js",
-            "jsx"
-        ],
-        "transform": {
-            "^.+\\.(js|jsx|ts|tsx)$": "babel-jest"
-        },
-        "testRegex": "(/__tests__/.*|\\.(test))\\.(ts|tsx|js)$",
-        "verbose": false,
-        "testEnvironment": "node"
     }
 }
