more scripts updates

--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -5,9 +5,11 @@
     "main": "index.js",
     "scripts": {
         "initdb": "docker-compose up -d",
-        "compile": "rm -rf build && babel --extensions '.ts,.js' src --out-dir build",
+        "prebuild": "rm -rf build/*",
+        "build": "babel --extensions '.ts,.js' src --out-dir build",
         "dev": "nodemon index.ts --exec babel-node --extensions '.ts' index.ts",
-        "start": "yarn compile && pm2 start ./build/index.js --name server",
+        "prestart": "yarn build",
+        "start": "yarn compile && NODE_ENV=production pm2 start ./build/index.js --name server",
         "check-types": "tsc",
         "preintegration-test": "NODE_ENV=test babel-node --extensions '.ts' ./src/utils/setup-test.ts",
         "integration-test": "NODE_ENV=test jest -c jest.config.integration.json --runInBand",
