--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -8,8 +8,8 @@
         "prebuild": "rm -rf build/*",
         "build": "babel --extensions '.ts,.js' src --out-dir build",
         "dev": "nodemon index.ts --exec babel-node --extensions '.ts' index.ts",
-        "prestart": "yarn build",
-        "start": "yarn compile && NODE_ENV=production pm2 start ./build/index.js --name server",
+        "prestart": "NODE_ENV=production yarn build",
+        "start": "NODE_ENV=production pm2 start ./build/index.js --name server",
         "check-types": "tsc",
         "preintegration-test": "NODE_ENV=test babel-node --extensions '.ts' ./src/utils/setup-test.ts",
         "integration-test": "NODE_ENV=test jest -c jest.config.integration.json --runInBand",
