--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -2,12 +2,12 @@
     "name": "server",
     "version": "1.0.0",
     "description": "GraphQL server",
-    "main": "index.js",
+    "main": "src/index.js",
     "scripts": {
         "initdb": "docker-compose up -d",
         "prebuild": "rm -rf build/*",
-        "build": "babel --extensions '.ts,.js' src --out-dir build",
-        "dev": "nodemon index.ts --exec babel-node --extensions '.ts' index.ts",
+        "build": "babel --extensions '.ts,.js' src --out-dir build --source-maps",
+        "dev": "nodemon index.ts --exec babel-node --extensions '.ts' ./src/index.ts",
         "prestart": "NODE_ENV=production yarn build",
         "start": "NODE_ENV=production pm2 start ./build/index.js --name server",
         "check-types": "tsc",
