--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -10,6 +10,7 @@
         "@types/styled-components": "^4.1.2",
         "react": "16.7.0-alpha.2",
         "react-dom": "16.7.0-alpha.2",
+        "react-router-dom": "^4.3.1",
         "react-scripts": "2.1.1",
         "styled-components": "^4.1.2",
         "typescript": "^3.2.1"
@@ -31,6 +32,7 @@
         "not op_mini all"
     ],
     "devDependencies": {
+        "@types/react-router-dom": "^4.3.1",
         "tslint": "^5.11.0",
         "tslint-config-prettier": "^1.17.0",
         "tslint-eslint-rules": "^5.4.0",
