--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -8,7 +8,10 @@
         "@types/react": "^16.7.11",
         "@types/react-dom": "^16.0.11",
         "@types/styled-components": "^4.1.2",
+        "apollo-boost": "^0.1.22",
+        "graphql": "^14.0.2",
         "react": "16.7.0-alpha.2",
+        "react-apollo": "^2.3.2",
         "react-dom": "16.7.0-alpha.2",
         "react-router-dom": "^4.3.1",
         "react-scripts": "2.1.1",
