--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -8,8 +8,13 @@
         "@types/react": "^16.7.11",
         "@types/react-dom": "^16.0.11",
         "@types/styled-components": "^4.1.2",
-        "apollo-boost": "^0.1.22",
+        "apollo-cache-inmemory": "^1.3.11",
+        "apollo-client": "^2.4.7",
+        "apollo-link": "^1.2.4",
+        "apollo-link-error": "^1.1.2",
+        "apollo-link-http": "^1.5.7",
         "graphql": "^14.0.2",
+        "jsonwebtoken": "^8.4.0",
         "react": "16.7.0-alpha.2",
         "react-apollo": "^2.3.2",
         "react-dom": "16.7.0-alpha.2",
