--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -40,6 +40,7 @@
         "not op_mini all"
     ],
     "devDependencies": {
+        "@types/jsonwebtoken": "^8.3.0",
         "@types/react-router-dom": "^4.3.1",
         "tslint": "^5.11.0",
         "tslint-config-prettier": "^1.17.0",
