--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -45,6 +45,7 @@
         "tslint": "^5.11.0",
         "tslint-config-prettier": "^1.17.0",
         "tslint-eslint-rules": "^5.4.0",
-        "tslint-react": "^3.6.0"
+        "tslint-react": "^3.6.0",
+        "typescript-styled-plugin": "^0.13.0"
     }
 }
