--- a/packages/client/tsconfig.json
+++ b/packages/client/tsconfig.json
@@ -14,7 +14,12 @@
         "noEmit": true,
         "jsx": "preserve",
         "noUnusedParameters": true,
-        "lib": ["es6", "es2015", "es2016", "dom", "scripthost"]
+        "lib": ["es6", "es2015", "es2016", "dom", "scripthost"],
+        "plugins": [
+            {
+                "name": "typescript-styled-plugin"
+            }
+        ]
     },
     "include": ["src"]
 }
